rename sub dir, trying other methods

--- a/infoGraphUnsupervised/try_pyg.ipynb
+++ b/infoGraphUnsupervised/try_pyg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,45 +139,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'edge_index': tensor([   0,  406,  514,  558,  598,  638,  694,  836, 1062, 1254, 1374, 1408,\n",
-       "         1622, 1836, 1940, 2012, 2038, 2082, 2356, 2628, 3102, 3142, 3174, 3232,\n",
-       "         3290, 3308, 3348, 3368, 3398, 3428, 3462, 3688, 3708, 3774, 3858, 3952,\n",
-       "         4010, 4032, 4056, 4080, 4096, 4148, 4216, 4236, 4436, 4570, 4820, 4892,\n",
-       "         4936, 4972, 4998, 5010, 5174, 5236, 5278, 5312, 5490, 5684, 5742, 5816,\n",
-       "         5852, 6014, 6046, 6088, 6218, 6502, 6580, 6626, 6712, 6834, 6872, 6980,\n",
-       "         7088, 7110, 7202, 7300, 7358, 7366, 7520, 7548, 7920, 7948, 8022, 8038]),\n",
-       " 'x': tensor([   0,   77,  112,  125,  138,  153,  174,  223,  285,  337,  371,  384,\n",
-       "          442,  507,  542,  570,  582,  599,  657,  729,  795,  812,  824,  839,\n",
-       "          857,  866,  882,  892,  904,  918,  932,  978,  987, 1015, 1031, 1060,\n",
-       "         1080, 1088, 1100, 1111, 1119, 1137, 1160, 1170, 1214, 1258, 1310, 1321,\n",
-       "         1336, 1350, 1362, 1369, 1416, 1430, 1441, 1455, 1494, 1552, 1572, 1590,\n",
-       "         1607, 1652, 1666, 1681, 1712, 1783, 1808, 1826, 1854, 1892, 1908, 1938,\n",
-       "         1965, 1973, 2007, 2035, 2055, 2060, 2102, 2115, 2205, 2215, 2232, 2238]),\n",
-       " 'y': tensor([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
-       "         18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35,\n",
-       "         36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53,\n",
-       "         54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71,\n",
-       "         72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83])}"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset.slices"
+    "import torch\n",
+    "from torch_geometric.data import Data, InMemoryDataset\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "class MyData(InMemoryDataset):\n",
+    "    def __init__(self, root='../mydata/', transform=None, pre_transform=None, pre_filter=None):\n",
+    "        super().__init__(root, transform, pre_transform, pre_filter)\n",
+    "        x = torch.tensor(\n",
+    "            [[0], [0], [0], [1], [1], [1], [1]], dtype=torch.float32\n",
+    "        )\n",
+    "        edge_index = torch.tensor([\n",
+    "            [0, 1, 0, 3, 4, 5],\n",
+    "            [1, 2, 2, 4, 5, 6]\n",
+    "        ], dtype=torch.int64)\n",
+    "        # y = torch.tensor([1,1], dtype=torch.int64)\n",
+    "        self.data = Data(x=x, edge_index=edge_index)\n",
+    "        self.slices = {\n",
+    "            'x': x, 'edge_index': edge_index\n",
+    "        }\n",
+    "mydata = MyData()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "only one element tensors can be converted to Python scalars",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[76], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m myloader \u001b[39m=\u001b[39m DataLoader(mydata, batch_size\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfor\u001b[39;00m data \u001b[39min\u001b[39;00m mydata:\n\u001b[1;32m      3\u001b[0m     \u001b[39mprint\u001b[39m(data)\n",
+      "File \u001b[0;32m/Applications/anaconda3/envs/cs150/lib/python3.8/site-packages/torch_geometric/data/dataset.py:239\u001b[0m, in \u001b[0;36mDataset.__getitem__\u001b[0;34m(self, idx)\u001b[0m\n\u001b[1;32m    229\u001b[0m \u001b[39m\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\"\"In case :obj:`idx` is of type integer, will return the data object\u001b[39;00m\n\u001b[1;32m    230\u001b[0m \u001b[39mat index :obj:`idx` (and transforms it in case :obj:`transform` is\u001b[39;00m\n\u001b[1;32m    231\u001b[0m \u001b[39mpresent).\u001b[39;00m\n\u001b[1;32m    232\u001b[0m \u001b[39mIn case :obj:`idx` is a slicing object, *e.g.*, :obj:`[2:5]`, a list, a\u001b[39;00m\n\u001b[1;32m    233\u001b[0m \u001b[39mtuple, or a :obj:`torch.Tensor` or :obj:`np.ndarray` of type long or\u001b[39;00m\n\u001b[1;32m    234\u001b[0m \u001b[39mbool, will return a subset of the dataset at the specified indices.\"\"\"\u001b[39;00m\n\u001b[1;32m    235\u001b[0m \u001b[39mif\u001b[39;00m (\u001b[39misinstance\u001b[39m(idx, (\u001b[39mint\u001b[39m, np\u001b[39m.\u001b[39minteger))\n\u001b[1;32m    236\u001b[0m         \u001b[39mor\u001b[39;00m (\u001b[39misinstance\u001b[39m(idx, Tensor) \u001b[39mand\u001b[39;00m idx\u001b[39m.\u001b[39mdim() \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m)\n\u001b[1;32m    237\u001b[0m         \u001b[39mor\u001b[39;00m (\u001b[39misinstance\u001b[39m(idx, np\u001b[39m.\u001b[39mndarray) \u001b[39mand\u001b[39;00m np\u001b[39m.\u001b[39misscalar(idx))):\n\u001b[0;32m--> 239\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mindices()[idx])\n\u001b[1;32m    240\u001b[0m     data \u001b[39m=\u001b[39m data \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtransform \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39melse\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtransform(data)\n\u001b[1;32m    241\u001b[0m     \u001b[39mreturn\u001b[39;00m data\n",
+      "File \u001b[0;32m/Applications/anaconda3/envs/cs150/lib/python3.8/site-packages/torch_geometric/data/in_memory_dataset.py:82\u001b[0m, in \u001b[0;36mInMemoryDataset.get\u001b[0;34m(self, idx)\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_data_list[idx] \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m     80\u001b[0m     \u001b[39mreturn\u001b[39;00m copy\u001b[39m.\u001b[39mcopy(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_data_list[idx])\n\u001b[0;32m---> 82\u001b[0m data \u001b[39m=\u001b[39m separate(\n\u001b[1;32m     83\u001b[0m     \u001b[39mcls\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdata\u001b[39m.\u001b[39;49m\u001b[39m__class__\u001b[39;49m,\n\u001b[1;32m     84\u001b[0m     batch\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdata,\n\u001b[1;32m     85\u001b[0m     idx\u001b[39m=\u001b[39;49midx,\n\u001b[1;32m     86\u001b[0m     slice_dict\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mslices,\n\u001b[1;32m     87\u001b[0m     decrement\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[1;32m     88\u001b[0m )\n\u001b[1;32m     90\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_data_list[idx] \u001b[39m=\u001b[39m copy\u001b[39m.\u001b[39mcopy(data)\n\u001b[1;32m     92\u001b[0m \u001b[39mreturn\u001b[39;00m data\n",
+      "File \u001b[0;32m/Applications/anaconda3/envs/cs150/lib/python3.8/site-packages/torch_geometric/data/separate.py:37\u001b[0m, in \u001b[0;36mseparate\u001b[0;34m(cls, batch, idx, slice_dict, inc_dict, decrement)\u001b[0m\n\u001b[1;32m     35\u001b[0m         slices \u001b[39m=\u001b[39m slice_dict[attr]\n\u001b[1;32m     36\u001b[0m         incs \u001b[39m=\u001b[39m inc_dict[attr] \u001b[39mif\u001b[39;00m decrement \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m---> 37\u001b[0m     data_store[attr] \u001b[39m=\u001b[39m _separate(attr, batch_store[attr], idx, slices,\n\u001b[1;32m     38\u001b[0m                                  incs, batch, batch_store, decrement)\n\u001b[1;32m     40\u001b[0m \u001b[39m# The `num_nodes` attribute needs special treatment, as we cannot infer\u001b[39;00m\n\u001b[1;32m     41\u001b[0m \u001b[39m# the real number of nodes from the total number of nodes alone:\u001b[39;00m\n\u001b[1;32m     42\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(batch_store, \u001b[39m'\u001b[39m\u001b[39m_num_nodes\u001b[39m\u001b[39m'\u001b[39m):\n",
+      "File \u001b[0;32m/Applications/anaconda3/envs/cs150/lib/python3.8/site-packages/torch_geometric/data/separate.py:64\u001b[0m, in \u001b[0;36m_separate\u001b[0;34m(key, value, idx, slices, incs, batch, store, decrement)\u001b[0m\n\u001b[1;32m     62\u001b[0m key \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(key)\n\u001b[1;32m     63\u001b[0m cat_dim \u001b[39m=\u001b[39m batch\u001b[39m.\u001b[39m__cat_dim__(key, value, store)\n\u001b[0;32m---> 64\u001b[0m start, end \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(slices[idx]), \u001b[39mint\u001b[39m(slices[idx \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m])\n\u001b[1;32m     65\u001b[0m value \u001b[39m=\u001b[39m value\u001b[39m.\u001b[39mnarrow(cat_dim \u001b[39mor\u001b[39;00m \u001b[39m0\u001b[39m, start, end \u001b[39m-\u001b[39m start)\n\u001b[1;32m     66\u001b[0m value \u001b[39m=\u001b[39m value\u001b[39m.\u001b[39msqueeze(\u001b[39m0\u001b[39m) \u001b[39mif\u001b[39;00m cat_dim \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39melse\u001b[39;00m value\n",
+      "\u001b[0;31mValueError\u001b[0m: only one element tensors can be converted to Python scalars"
+     ]
+    }
+   ],
+   "source": [
+    "myloader = DataLoader(mydata, batch_size=2)\n",
+    "for data in mydata:\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataBatch(edge_index=[2, 8038], x=[2238, 190], y=[83], batch=[2238], ptr=[84])\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataloader =  DataLoader(dataset, batch_size=128)\n",
+    "for data in dataloader:\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,26 +232,6 @@
     "# dataset = TUDataset(path, name=DS).shuffle()\n",
     "dataset_num_features = max(dataset.num_features, 1)\n",
     "dataloader = DataLoader(dataset, batch_size=batch_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.int64"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset.data.y.dtype"
    ]
   },
   {
