rename dirs and update readme

--- a/Graph2Vec/try.ipynb
+++ b/Graph2Vec/try.ipynb
@@ -15,7 +15,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "DATAPATH = os.path.join(\"..\", \"mydata\", \"trace_head.csv\")\n",
-    "RESULTFOLDER = os.path.join(\"..\", \"results\", \"try_graph2vec\")\n",
+    "RESULTFOLDER = os.path.join(\"..\", \"results\", \"graph2vec\")\n",
     "Path(RESULTFOLDER).mkdir(parents = True, exist_ok = True)"
    ]
   },
@@ -24,8 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Construct graphs with NetworkX - [link](https://networkx.org/documentation/stable/tutorial.html)\n",
-    "example:"
+    "### Construct graphs with NetworkX - [link](https://networkx.org/documentation/stable/tutorial.html)"
    ]
   },
   {
